Fixed pre causing main to be too wide

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -370,7 +370,7 @@ article {
         }
 
         table {
-            width: 100%;
+            align-self: stretch;
 
             td {
                 padding: 18px 28px;
